--- a/frameworks/src/main/resources/application.yml
+++ b/frameworks/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 9000
+
+spring:
+    datasource:
+      url: "jdbc:postgresql://localhost:5432/postgres"
+      username: "postgres"
+      password: "pg123456"
+    jpa:
+      show-sql: true
+      hibernate:
+        ddl-auto: create
