--- a/frameworks/src/main/resources/application.yml
+++ b/frameworks/src/main/resources/application.yml
@@ -2,11 +2,26 @@ server:
   port: 9000
 
 spring:
-    datasource:
-      url: "jdbc:postgresql://localhost:5432/postgres"
-      username: "postgres"
-      password: "pg123456"
-    jpa:
-      show-sql: true
+  datasource:
+    url: "jdbc:h2:mem:testdb"
+    driverClassName: "org.h2.Driver"
+    username: "sa"
+    password: "password"
+  h2:
+    console:
+      enabled: true
+  jpa:
+    database-platform: "org.hibernate.dialect.H2Dialect"
+    show-sql: true
+#    hibernate:
+#      ddl-auto: create
+
+#spring:
+#    datasource:
+#      url: "jdbc:postgresql://localhost:5432/postgres"
+#      username: "postgres"
+#      password: "pg123456"
+#    jpa:
+#      show-sql: true
 #      hibernate:
 #        ddl-auto: create
