--- a/frameworks/src/main/resources/application.yml
+++ b/frameworks/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 server:
   port: 9000
-
 spring:
+  profiles:
+    active: prod
+---
+spring:
+  profiles: local
   datasource:
     url: "jdbc:h2:mem:testdb"
     driverClassName: "org.h2.Driver"
@@ -15,13 +19,25 @@ spring:
     show-sql: true
 #    hibernate:
 #      ddl-auto: create
-
-#spring:
-#    datasource:
-#      url: "jdbc:postgresql://localhost:5432/postgres"
-#      username: "postgres"
-#      password: "pg123456"
-#    jpa:
-#      show-sql: true
-#      hibernate:
-#        ddl-auto: create
+---
+spring:
+  profiles: prod
+  datasource:
+    url: "jdbc:postgresql://hattie.db.elephantsql.com:5432/pyxsfemm"
+    username: "pyxsfemm"
+    password: "ERlRGaRPzEhOD4l43_SG206GE9_genJn"
+  jpa:
+    show-sql: true
+#    hibernate:
+#      ddl-auto: create
+---
+spring:
+  profiles: test-prod
+  datasource:
+    url: "jdbc:postgresql://localhost:5432/postgres"
+    username: "postgres"
+    password: "pg123456"
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create
